@@ -1,1 +1,0 @@
-Microtouch input driver for the Xorg X server.
