@@ -1,26 +1,0 @@
-# $NetBSD: Makefile,v 1.11 2023/01/29 21:18:25 ryoon Exp $
-
-DISTNAME=	xf86-input-mutouch-1.3.0
-PKGREVISION=	3
-CATEGORIES=	x11
-MASTER_SITES=	${MASTER_SITE_XORG:=driver/}
-EXTRACT_SUFX=	.tar.bz2
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://xorg.freedesktop.org/
-COMMENT=	Microtouch input driver for the Xorg X server
-
-GNU_CONFIGURE=	yes
-USE_LANGUAGES=	c99
-USE_LIBTOOL=	yes
-USE_TOOLS+=	pkg-config
-
-RELRO_SUPPORTED=	partial
-
-CONFIGURE_ENV.SunOS+=	DRIVER_MAN_SUFFIX=4
-
-X11_DRV_NAME=	mutouch
-.include "../../meta-pkgs/modular-xorg/avoid-duplicate.mk"
-.include "../../x11/xorgproto/buildlink3.mk"
-.include "../../x11/modular-xorg-server/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
