@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2015/07/02 03:37:49 rodent Exp $
-lib/xorg/modules/input/mutouch_drv.la
-man/man4/mutouch.4
