@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:34:40 nia Exp $
-
-BLAKE2s (xf86-input-mutouch-1.3.0.tar.bz2) = 3184a6bff09cf3267862c63bdfb043b62d477185d50c20f045735b165b65a0ac
-SHA512 (xf86-input-mutouch-1.3.0.tar.bz2) = 65a27032c20310fc01bdf79ac99d2e7d7b54d0cd4ae8808c45311d91a95c5711f107e00805549c16ca874eee988fd89f5c0924fc2b952ab8c6f1466725104063
-Size (xf86-input-mutouch-1.3.0.tar.bz2) = 268865 bytes
